# ginger2

./: CHANGELOG  LICENSE  README.markdown  ginger.cabal  ginger2.cabal
cli/: Main.hs
examples/: test.html  test.json
src/Language/: Ginger.haddock  Ginger.hs
src/Language/Ginger/: AST.hs  BuiltinsAutodoc.hs  FileLoader.hs  Interpret.hs  Lipsum.hs  Parse.hs  Render.hs  RuntimeError.hs  SourcePosition.hs  StringFormatting.hs  TypeSystem.hs  Value.hs
src/Language/Ginger/Interpret/: Builtins.hs  DefEnv.hs  Eval.hs  Type.hs
src/Language/Ginger/StringFormatting/: Printf.hs  Python.hs
test/: Main.hs
test/Language/Ginger/: TestUtils.hs
test/Language/Ginger/AST/: Tests.hs
test/Language/Ginger/Interpret/: Tests.hs
test/Language/Ginger/Parse/: Tests.hs
test/Language/Ginger/Value/: Tests.hs
