cabal-version: 3.0
name: ginger
version: 2.0.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Tobias Dammers
maintainer: tdammers@gmail.com
copyright: 2025 Tobias Dammers
category: Language
build-type: Simple
-- extra-doc-files: CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import: warnings
    exposed-modules: Language.Ginger
                   , Language.Ginger.AST
                   , Language.Ginger.Value
                   , Language.Ginger.Interpret
                   , Language.Ginger.Parse
                   , Language.Ginger.RuntimeError
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.20.0.0
                 , base64-bytestring >=1.2.1.0 && <1.3
                 , bytestring >=0.12.2.0 && <0.13
                 , containers >=0.7 && <0.9
                 , megaparsec >=9.7.0 && <9.8
                 , mtl >=2.3.1 && <2.4
                 , tasty >=1.5.3 && <1.6
                 , tasty-quickcheck >=0.11.1 && <0.12
                 , text >= 2.0 && <2.3
    hs-source-dirs: src
    default-language: Haskell2010

executable ginger
    import: warnings
    main-is: Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
        ginger

    hs-source-dirs: cli
    default-language: Haskell2010

test-suite ginger-test
    import: warnings
    default-language: Haskell2010
    -- other-extensions:
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    other-modules: Language.Ginger.Value.Tests
                 , Language.Ginger.AST.Tests
                 , Language.Ginger.Interpret.Tests
                 , Language.Ginger.Parse.Tests
    build-depends: base ^>=4.20.0.0
                 , ginger
                 , base64-bytestring >=1.2.1.0 && <1.3
                 , bytestring >=0.12.2.0 && <0.13
                 , containers >=0.7 && <0.9
                 , megaparsec >=9.7.0 && <9.8
                 , mtl >=2.3.1 && <2.4
                 , tasty >=1.5.3 && <1.6
                 , tasty-quickcheck >=0.11.1 && <0.12
                 , tasty-hunit >=0.10.2 && <0.11
                 , text >= 2.0 && <2.3
