cabal-version: 3.0
name: ginger2
version: 2.0.0.0
synopsis: Jinja templates for Haskell
description: Ginger2 approximates Jinja2 (https://jinja.palletsprojects.com/)
             in Haskell.
license: MIT
license-file: LICENSE
author: Tobias Dammers
maintainer: tdammers@gmail.com
copyright: 2025 Tobias Dammers
category: Language
build-type: Simple
bug-reports: https://github.com/tdammers/ginger2/issues
extra-doc-files: README.markdown
               , CHANGELOG
extra-source-files: src/Language/Ginger.haddock

source-repository head
    type: git
    location: https://github.com/tdammers/ginger2

common warnings
    ghc-options: -Wall

library
    import: warnings
    exposed-modules: Language.Ginger
                   , Language.Ginger.BuiltinsAutodoc
                   , Language.Ginger.AST
                   , Language.Ginger.Value
                   , Language.Ginger.Interpret
                   , Language.Ginger.Interpret.Builtins
                   , Language.Ginger.Interpret.DefEnv
                   , Language.Ginger.Interpret.Type
                   , Language.Ginger.Interpret.Eval
                   , Language.Ginger.Parse
                   , Language.Ginger.FileLoader
                   , Language.Ginger.Render
                   , Language.Ginger.RuntimeError
                   , Language.Ginger.SourcePosition
    -- other-modules:
    -- other-extensions:
    build-depends: base >=4.14.0.0 && <5
                 , aeson >=2.2.3.0 && <2.3
                 , array >=0.5.8 && <0.6
                 , base64-bytestring >=1.2.1.0 && <1.3
                 , bytestring >=0.12.2.0 && <0.13
                 , containers >=0.7 && <0.9
                 , filepath >=1.5.4.0 && <1.6
                 , megaparsec >=9.7.0 && <9.8
                 , mtl >=2.3.1 && <2.4
                 , regex-tdfa >=1.3.2.3 && <1.4
                 , scientific >=0.3.8 && <0.4
                 , SHA >=1.6.4.4 && <1.7
                 , tasty >=1.5.3 && <1.6
                 , tasty-quickcheck >=0.11.1 && <0.12
                 , template-haskell >=2.19.0.0 && <2.24
                 , text >=2.0 && <2.3
                 , time >=1.12 && <1.15
                 , vector >=0.13.2 && <0.14
    hs-source-dirs: src
    default-language: Haskell2010

executable ginger2
    import: warnings
    main-is: Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base >=4.14.0.0 && <5
                 , ginger2
                 , aeson >=2.2.3.0 && <2.3
                 , cmark >=0.6.1 && <0.7
                 , containers >=0.7 && <0.9
                 , directory >=1.3.9 && <1.4
                 , filepath >=1.5.4.0 && <1.6
                 , optparse-applicative >=0.18.1.0 && <0.19
                 , text >=2.0 && <2.3
                 , vector >=0.13.2 && <0.14
                 , yaml >=0.11.11 && <0.12
    hs-source-dirs: cli
    default-language: Haskell2010

test-suite ginger-test
    import: warnings
    default-language: Haskell2010
    -- other-extensions:
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    other-modules: Language.Ginger.Value.Tests
                 , Language.Ginger.AST.Tests
                 , Language.Ginger.Interpret.Tests
                 , Language.Ginger.Parse.Tests
                 , Language.Ginger.TestUtils
    build-depends: base >=4.14.0.0 && <5
                 , ginger2
                 , base64-bytestring >=1.2.1.0 && <1.3
                 , bytestring >=0.12.2.0 && <0.13
                 , containers >=0.7 && <0.9
                 , megaparsec >=9.7.0 && <9.8
                 , mtl >=2.3.1 && <2.4
                 , quickcheck-instances >=0.3.2 && <0.4
                 , tasty >=1.5.3 && <1.6
                 , tasty-quickcheck >=0.11.1 && <0.12
                 , tasty-hunit >=0.10.2 && <0.11
                 , text >= 2.0 && <2.3
                 , vector >=0.13.2 && <0.14
